added react testing library, added tests for button and sidebar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,9 @@
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
-    }
+    },
+    "include": [
+      "./config/jest/setupTests.ts"
+    ]
   }
 }
